--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,48 @@
                     </div>
                  </div>
             </div>
+            <div class="information">
+                <h2>Some Random information.</h2>
+                <div class="btn-group">
+                    <div class="stuff--container">
+                        <div class="stuff m-2"></div>
+                        <p>This is some subtext<br> under an illustration <br>or image</p>
+                    </div>
+                    <div class="stuff--container"> 
+                        <div class="stuff m-2"></div>
+                        <p>This is some subtext<br> under an illustration <br>or image</p>
+                    </div>
+                    <div class="stuff--container"> 
+                        <div class="stuff m-2"></div>
+                        <p>This is some subtext<br> under an illustration <br>or image</p>
+                    </div>
+                    <div class="stuff--container"> 
+                        <div class="stuff m-2"></div>
+                        <p>This is some subtext<br> under an illustration <br>or image</p>
+                    </div>
+                </div>
+            </div>
+            <div class="quote--section">
+                <div class="quote--holder">
+                    <i class="fw-light">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</i>
+                    <p class="fw-bolder fs-4 text-lg-end">-Thor, God of Thunder.</p>
+                </div>
+            </div>
+            <div class="action--section">
+                <div class="action--holder">
+                    <div>
+                        <span class="fw-bolder fs-4">Call to action! it's time!</span>
+                        <p class="fs-6 fw-light">Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <button class="btn btn-outline-light border-2 fw-medium sign-up">Sign up</button>
+                </div>
+            </div>
+            <footer>
+                <div class="footer--text">
+                    <p class="fs-6">Copyright @ The Odin Project 2021</p>
+                </div>
+                
+            </footer>
 		</div>
 		<script src="main.js" type="module"></script>
 	</body>
