Responsive Styling begins
I made a major change here, by changing my css file into a scss file so I can use SASS And edit bootstrap code

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
             </div>
             <div class="information">
                 <h2>Some Random information.</h2>
-                <div class="btn-group">
+                <div class="stuff--group">
                     <div class="stuff--container">
                         <div class="stuff m-2"></div>
                         <p>This is some subtext<br> under an illustration <br>or image</p>
